--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,35 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./css/main.css" /> 
+  <script src="./css/index.js"></script>
+  <script src="bundle.js" type="text/javascript">    
+
+  </script>
+  
   <title>MP 0</title>
 </head>
 
 <body>
-  <h1>Hello World!</h1>
-  <img src="assets/image.jpg" />
+  
+  <div class="wrapper">
+    <div id="CARD">
+    <img onclick="abtme()" src="assets/ME.jpg" />
+    <h1 onclick="abtme()">Ahmed M. Sozzer</h1>
+    <div class="abt-me">
+    </div>
+    <br>
+  <a>asozzer2@illinois.edu</a><br><br><a href="https://github.com/Amsozzer1/">Github</a><p>Hi, I'm Ahmed. I'm a senior at the University of Illinois at Urbana-Champaign studying Computer Science. I'm interested in software engineering, web development, and machine learning. I'm currently looking for full-time opportunities in software engineering.</p>
+  
+ 
+  
+    </div>
+  </div>
 
-  <script src="bundle.js" type="text/javascript"></script>
+
+  
 </body>
+
+
 
 </html>
